--- a/ChatHouse/app/src/main/res/layout/activity_following_followers_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_following_followers_page.xml
@@ -17,8 +17,9 @@
         android:text="Following"
         android:textSize="24dp"
         android:textStyle="bold"
+        android:fontFamily="serif"
         android:id="@+id/FollowingfollowersText"
-        android:textColor="@color/almostblack">
+        android:textColor="?colorPrimary">
 
     </TextView>
     <ListView
