--- a/ChatHouse/app/src/main/res/layout/activity_login.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_login.xml
@@ -95,7 +95,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:clickable="true"
-        android:fontFamily="sans-serif-condensed-light"
+        android:fontFamily="serif"
         android:text="You don't have an account? Sign up"
         android:textColorLink="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/Button"
@@ -109,7 +109,7 @@
         android:layout_height="50dp"
         android:layout_marginBottom="128dp"
         android:backgroundTint="?colorSecondary"
-        android:fontFamily="sans-serif-condensed-light"
+        android:fontFamily="serif"
         android:text="Login"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
