--- a/ChatHouse/app/src/main/res/layout/activity_sign_up.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_sign_up.xml
@@ -149,7 +149,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginBottom="10dp"
         android:clickable="true"
-        android:fontFamily="sans-serif-condensed-light"
+        android:fontFamily="serif"
         android:text="Do you have an account? Login"
         android:textColorLink="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/submitBtn"
@@ -163,7 +163,7 @@
         android:layout_height="50dp"
         android:layout_marginBottom="85dp"
         android:backgroundTint="?colorSecondary"
-        android:fontFamily="sans-serif-condensed-light"
+        android:fontFamily="serif"
         android:text="sign up"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
