--- a/ChatHouse/app/src/main/res/layout/activity_edit_profile.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_edit_profile.xml
@@ -54,8 +54,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/EditImageContainer"
-            android:fontFamily="sans-serif-thin"
-            android:textColor="@color/almostblack"
+            android:fontFamily="serif"
+            android:textColor="?colorPrimary"
             android:text="Set new picture"
             android:textSize="15dp"
             android:clickable="true">
@@ -69,12 +69,16 @@
             app:layout_constraintTop_toBottomOf="@id/SetNewPicture"
             app:layout_constraintEnd_toStartOf="@id/FirstNameEdit"
             android:text="First Name: "
+            android:fontFamily="serif"
+            android:textStyle="italic"
             android:textSize="15dp"
+            android:textColor="?colorPrimary"
             android:gravity="center_vertical"
             ></TextView>
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="?colorPrimary"
             android:id="@+id/FirstNameEdit"
             android:layout_marginTop="0dp"
             app:layout_constraintStart_toEndOf="@id/FirstNameText"
@@ -86,18 +90,22 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="50dp"
+            android:textColor="?colorPrimary"
             android:id="@+id/LastNameText"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/FirstNameEdit"
             app:layout_constraintEnd_toStartOf="@id/LastNameEdit"
             android:text="Last Name: "
+            android:fontFamily="serif"
+            android:textStyle="italic"
             android:textSize="15dp"
             android:gravity="center_vertical"
             ></TextView>
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="?colorPrimary"
             android:id="@+id/LastNameEdit"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/FirstNameEdit"
@@ -110,10 +118,13 @@
             android:id="@+id/UsernameText"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
+            android:textColor="?colorPrimary"
             app:layout_constraintEnd_toStartOf="@id/UsernameEdit"
             app:layout_constraintTop_toBottomOf="@id/LastNameEdit"
             android:text="Username: "
             android:gravity="center_vertical"
+            android:fontFamily="serif"
+            android:textStyle="italic"
             >
 
         </TextView>
@@ -121,6 +132,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/UsernameEdit"
+            android:textColor="?colorPrimary"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toEndOf="@id/UsernameText"
             app:layout_constraintTop_toBottomOf="@id/LastNameEdit"
@@ -133,6 +145,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="50dp"
+            android:textColor="?colorPrimary"
             android:id="@+id/BioText"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -140,6 +153,8 @@
             app:layout_constraintTop_toBottomOf="@id/UsernameEdit"
             android:text="Bio: "
             android:gravity="center_vertical"
+            android:fontFamily="serif"
+            android:textStyle="italic"
             >
         </TextView>
         <EditText
@@ -147,6 +162,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/BioEdit"
             android:layout_marginTop="10dp"
+            android:textColor="?colorPrimary"
             app:layout_constraintStart_toEndOf="@id/BioText"
             app:layout_constraintTop_toBottomOf="@id/UsernameEdit"
             android:text="Edit Bio"
@@ -161,6 +177,8 @@
             app:layout_constraintTop_toBottomOf="@id/InterestsEditText"
             android:id="@+id/InterestEditContainer"
             android:layout_marginTop="20dp"
+            android:backgroundTint="?colorOnBackground"
+
             >
             <HorizontalScrollView
                 android:layout_width="wrap_content"
@@ -183,14 +201,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical"
-
                         >
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Wellness"
                             android:textSize="20dp"
-                            android:textColor="?colorSecondaryVariant"
+                            android:textColor="?colorOnPrimary"
                             android:layout_marginBottom="5dp"
 >
 
@@ -201,6 +218,8 @@
                             android:layout_height="400dp"
                             android:id="@+id/Wellness"
                             android:layout_marginRight="20dp"
+                            android:divider="@null"
+                            android:dividerHeight="0dp"
                             >
 
                         </ListView>
@@ -215,7 +234,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="20dp"
-                            android:textColor="?colorSecondaryVariant"
+                            android:textColor="?colorOnPrimary"
                             android:layout_marginBottom="5dp"
                             android:text="Identity"
                             >
@@ -225,6 +244,8 @@
                         <ListView
                             android:layout_width="170dp"
                             android:layout_height="400dp"
+                            android:divider="@null"
+                            android:dividerHeight="0dp"
                             android:id="@+id/Identity"
                             android:layout_marginRight="20dp">
 
@@ -239,7 +260,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="20dp"
-                            android:textColor="?colorSecondaryVariant"
+                            android:textColor="?colorOnPrimary"
                             android:layout_marginBottom="5dp"
                             android:text="Places"
                             >
@@ -248,6 +269,8 @@
 
                         <ListView
                             android:layout_width="170dp"
+                            android:divider="@null"
+                            android:dividerHeight="0dp"
                             android:layout_height="400dp"
                             android:id="@+id/Places"
                             android:layout_marginRight="20dp">
@@ -266,7 +289,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="20dp"
-                            android:textColor="?colorSecondaryVariant"
+                            android:textColor="?colorOnPrimary"
                             android:text="World Affaris"
                             >
 
@@ -275,6 +298,8 @@
                         <ListView
                             android:layout_width="170dp"
                             android:layout_height="400dp"
+                            android:divider="@null"
+                            android:dividerHeight="0dp"
                             android:id="@+id/WorldAffaris"
                             android:layout_marginRight="20dp">
 
@@ -290,7 +315,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="20dp"
-                            android:textColor="?colorSecondaryVariant"
+                            android:textColor="?colorOnPrimary"
                             android:layout_marginBottom="5dp"
                             android:text="Tech"
                             >
@@ -300,6 +325,8 @@
                         <ListView
                             android:layout_width="170dp"
                             android:layout_height="400dp"
+                            android:divider="@null"
+                            android:dividerHeight="0dp"
                             android:id="@+id/Tech"
                             android:layout_marginRight="20dp">
                         </ListView>
@@ -314,7 +341,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="20dp"
-                            android:textColor="?colorSecondaryVariant"
+                            android:textColor="?colorOnPrimary"
                             android:layout_marginBottom="5dp"
                             android:text="Hanging Out"
                             >
@@ -325,6 +352,8 @@
                             android:layout_width="170dp"
                             android:layout_height="400dp"
                             android:id="@+id/HangingOut"
+                            android:divider="@null"
+                            android:dividerHeight="0dp"
                             android:layout_marginRight="20dp">
 
                         </ListView>
@@ -340,7 +369,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="20dp"
-                            android:textColor="?colorSecondaryVariant"
+                            android:textColor="?colorOnPrimary"
                             android:layout_marginBottom="5dp"
                             android:text="Knowledge"
                             >
@@ -350,6 +379,8 @@
                         <ListView
                             android:layout_width="170dp"
                             android:layout_height="400dp"
+                            android:divider="@null"
+                            android:dividerHeight="0dp"
                             android:id="@+id/Knowledge"
                             android:layout_marginRight="20dp">
 
@@ -365,7 +396,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="20dp"
-                            android:textColor="?colorSecondaryVariant"
+                            android:textColor="?colorOnPrimary"
                             android:layout_marginBottom="5dp"
                             android:text="Hustle"
                             >
@@ -375,6 +406,8 @@
                         <ListView
                             android:layout_width="170dp"
                             android:layout_height="400dp"
+                            android:divider="@null"
+                            android:dividerHeight="0dp"
                             android:id="@+id/Hustle"
                             android:layout_marginRight="20dp">
 
@@ -391,7 +424,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="20dp"
-                            android:textColor="?colorSecondaryVariant"
+                            android:textColor="?colorOnPrimary"
                             android:layout_marginBottom="5dp"
                             android:text="Sports"
                             >
@@ -401,6 +434,8 @@
                         <ListView
                             android:layout_width="170dp"
                             android:layout_height="400dp"
+                            android:divider="@null"
+                            android:dividerHeight="0dp"
                             android:id="@+id/Sports"
                             android:layout_marginRight="20dp"
                             >
@@ -418,7 +453,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="20dp"
-                            android:textColor="?colorSecondaryVariant"
+                            android:textColor="?colorOnPrimary"
                             android:layout_marginBottom="5dp"
                             android:text="Arts"
                             >
@@ -427,6 +462,8 @@
                         <ListView
                             android:layout_width="170dp"
                             android:layout_height="400dp"
+                            android:divider="@null"
+                            android:dividerHeight="0dp"
                             android:id="@+id/Arts"
                             android:layout_marginRight="20dp">
 
@@ -443,7 +480,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="20dp"
-                            android:textColor="?colorSecondaryVariant"
+                            android:textColor="?colorOnPrimary"
                             android:layout_marginBottom="5dp"
                             android:text="Life"
                             >
@@ -452,6 +489,8 @@
                         <ListView
                             android:layout_width="170dp"
                             android:layout_height="400dp"
+                            android:divider="@null"
+                            android:dividerHeight="0dp"
                             android:id="@+id/Life"
                             android:layout_marginRight="20dp">
 
@@ -468,7 +507,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="20dp"
-                            android:textColor="?colorSecondaryVariant"
+                            android:textColor="?colorOnPrimary"
                             android:layout_marginBottom="5dp"
                             android:text="Languages"
                             >
@@ -477,6 +516,8 @@
                         <ListView
                             android:layout_width="170dp"
                             android:layout_height="400dp"
+                            android:divider="@null"
+                            android:dividerHeight="0dp"
                             android:id="@+id/Languages"
                             android:layout_marginRight="20dp"
                             >
@@ -495,7 +536,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="20dp"
-                            android:textColor="?colorSecondaryVariant"
+                            android:textColor="?colorOnPrimary"
                             android:layout_marginBottom="5dp"
                             android:text="Entertainment"
                             >
@@ -506,6 +547,8 @@
                             android:layout_height="500dp"
                             android:id="@+id/Entertainment"
                             android:layout_marginRight="20dp"
+                            android:divider="@null"
+                            android:dividerHeight="0dp"
                             >
 
                         </ListView>
@@ -522,7 +565,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="20dp"
-                            android:textColor="?colorSecondaryVariant"
+                            android:textColor="?colorOnPrimary"
                             android:layout_marginBottom="5dp"
                             android:text="Faith"
                             >
@@ -532,6 +575,8 @@
                         <ListView
                             android:layout_width="170dp"
                             android:layout_height="400dp"
+                            android:divider="@null"
+                            android:dividerHeight="0dp"
                             android:id="@+id/Faith"
                             android:layout_marginRight="20dp">
 
@@ -552,6 +597,7 @@
             android:layout_marginTop="10dp"
             android:id="@+id/InterestsEditText"
             android:fontFamily="serif"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/BioEdit"
             android:textSize="26dp"
@@ -565,9 +611,10 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:id="@+id/SaveButton"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="?colorOnBackground"
             android:layout_marginTop="10dp"
             android:text="Save"
+            android:fontFamily="serif"
             android:textColor="?colorSecondaryVariant"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -575,16 +622,7 @@
 
         </Button>
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="20sp"
-            android:textColor="#000"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/SaveButton"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
