--- a/ChatHouse/app/src/main/res/layout/activity_home_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_home_page.xml
@@ -119,9 +119,10 @@
             android:layout_marginTop="10dp"
             android:layout_alignParentBottom="true"
             android:layout_gravity="center"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="?colorOnBackground"
             android:drawableLeft="@drawable/plus"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="serif"
+            android:textStyle="bold"
             android:text="Start Room"
             android:textColor="?colorSecondaryVariant"
             android:textSize="16dp"></Button>
