--- a/ChatHouse/app/src/main/res/layout/activity_room_info.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_room_info.xml
@@ -14,6 +14,8 @@
         android:layout_marginTop="10dp"
         android:layout_gravity="center_horizontal"
         android:textSize="20dp"
+        android:textColor="?colorPrimary"
+        android:fontFamily="serif"
         android:textStyle="italic"
         android:text="Room Name"
         android:id="@+id/RoomNameInfoPage"
@@ -34,8 +36,12 @@
         android:layout_marginTop="10dp"
         android:textSize="20dp"
         android:textStyle="italic"
+        android:textColor="?colorPrimary"
+
         android:text="Room Description"
         android:id="@+id/DescriptionRoom"
+        android:fontFamily="serif"
+
         >
     </TextView>
     <View
@@ -67,6 +73,8 @@
             android:textColor="@color/white"
             android:text="Wellness"
             android:textSize="18dp"
+            android:fontFamily="serif"
+
             android:textStyle="italic" />
     </com.google.android.material.card.MaterialCardView>
     <View
@@ -78,6 +86,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="?colorPrimary"
+
         android:text="Members"
         android:layout_marginTop="10dp"
         android:fontFamily="serif"
