--- a/ChatHouse/app/src/main/res/layout/list_view_room_searched_items.xml
+++ b/ChatHouse/app/src/main/res/layout/list_view_room_searched_items.xml
@@ -41,6 +41,7 @@
                     android:textSize="21sp"
                     android:textStyle="bold"
                     android:layout_weight="1"
+                    android:fontFamily="serif"
                     android:text="Name"/>
 
                 <TextView
@@ -52,6 +53,8 @@
                     android:paddingEnd="16dp"
                     android:paddingRight="16dp"
                     android:textColor="?colorSecondary"
+                    android:fontFamily="serif"
+
                     android:textSize="17sp"
                     android:layout_weight="1"/>
 
@@ -75,6 +78,8 @@
                     android:paddingEnd="16dp"
                     android:paddingRight="16dp"
                     android:textColor="?colorSecondary"
+                    android:fontFamily="serif"
+
                     android:textSize="17sp"
                     android:layout_weight="1"/>
 
@@ -82,6 +87,8 @@
                     android:id="@+id/room_startTime"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:fontFamily="serif"
+
                     android:paddingStart="8dp"
                     android:paddingLeft="8dp"
                     android:paddingEnd="16dp"
