--- a/ChatHouse/app/src/main/res/layout/rooms_list_in_activities.xml
+++ b/ChatHouse/app/src/main/res/layout/rooms_list_in_activities.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:id="@+id/RoomConsiced"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="?colorOnBackground"
         app:cardCornerRadius="20dp"
         app:cardElevation="6dp"
         android:layout_marginHorizontal="30dp"
