--- a/ChatHouse/app/src/main/res/drawable/loading.xml
+++ b/ChatHouse/app/src/main/res/drawable/loading.xml
@@ -12,6 +12,7 @@
         android:thicknessRatio="4.0">
 
         <gradient
+            android:gradientRadius="20"
             android:centerColor="@color/almostpink"
             android:endColor="@color/Pink"
             android:startColor="@color/Verypink"
