--- a/ChatHouse/app/src/main/res/layout/activity_edit_profile.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_edit_profile.xml
@@ -28,9 +28,10 @@
             android:id="@+id/EditImageContainer"
             app:cardElevation="5dp"
             app:layout_constraintBottom_toTopOf="@+id/FirstNameEdit"
-
+            android:backgroundTint="?colorOnBackground"
             >
             <ImageView
+                android:clickable="true"
                 android:layout_width="150dp"
                 android:layout_height="100dp"
                 android:ems="10"
@@ -46,21 +47,21 @@
 
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/SetNewPicture"
-            android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/EditImageContainer"
-            android:fontFamily="serif"
-            android:textColor="?colorPrimary"
-            android:text="Set new picture"
-            android:textSize="15dp"
-            android:clickable="true">
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/SetNewPicture"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/EditImageContainer"-->
+<!--            android:fontFamily="serif"-->
+<!--            android:textColor="?colorPrimary"-->
+<!--            android:text="Set new picture"-->
+<!--            android:textSize="15dp"-->
+<!--            android:clickable="true">-->
 
-        </TextView>
+<!--        </TextView>-->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="50dp"
