--- a/ChatHouse/app/src/main/res/layout/activity_profile_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_profile_page.xml
@@ -27,6 +27,7 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="30dp"
+                android:backgroundTint="?colorOnBackground"
                 app:cardElevation="5dp"
                 app:layout_constraintBottom_toTopOf="@+id/Name"
                 app:layout_constraintEnd_toEndOf="parent"
