--- a/ChatHouse/app/src/main/res/layout/activity_edit_profile.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_edit_profile.xml
@@ -67,7 +67,7 @@
             android:layout_height="50dp"
             android:id="@+id/FirstNameText"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/SetNewPicture"
+            app:layout_constraintTop_toBottomOf="@id/EditImageContainer"
             app:layout_constraintEnd_toStartOf="@id/FirstNameEdit"
             android:text="First Name: "
             android:fontFamily="serif"
@@ -83,7 +83,7 @@
             android:id="@+id/FirstNameEdit"
             android:layout_marginTop="0dp"
             app:layout_constraintStart_toEndOf="@id/FirstNameText"
-            app:layout_constraintTop_toBottomOf="@id/SetNewPicture"
+            app:layout_constraintTop_toBottomOf="@id/EditImageContainer"
             android:text="Edit  FirstName"
             >
 
