--- a/ChatHouse/app/src/main/res/layout/activity_setting_page.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_setting_page.xml
@@ -37,6 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:paddingStart="10dp"
+            android:textColor="?colorOnSurface"
             android:text="Dark"/>
 
         <RadioButton
@@ -44,6 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:paddingStart="10dp"
+            android:textColor="?colorOnSurface"
             android:text="Light"/>
 
     </RadioGroup>
