reply image done

--- a/ChatHouse/app/src/main/res/layout/chat_image_left.xml
+++ b/ChatHouse/app/src/main/res/layout/chat_image_left.xml
@@ -50,6 +50,7 @@
                 </TextView>
 
                 <ImageView
+                    android:adjustViewBounds="true"
                     android:id="@+id/chat_messageImage_left_image"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -58,18 +59,6 @@
                     android:layout_marginVertical="4dp"
                     app:srcCompat="@drawable/thumb_15951118880user" />
 
-                <TextView
-                    android:id="@+id/chat_message_left_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:maxWidth="250dp"
-                    android:text="this image is great!"
-                    android:textColor="@color/black"
-                    android:textSize="14dp"
-                    android:textStyle="normal">
-
-                </TextView>
 
                 <TextView
                     android:id="@+id/chat_time_left_image"
