--- a/ChatHouse/app/src/main/res/layout/activity_room.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_room.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="2dp"
     android:background="?colorOnBackground"
     tools:context=".Pages.Room">
 
@@ -77,11 +78,20 @@
             android:visibility="gone">
 
             <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
                 android:src="@drawable/ic_baseline_reply_24" />
+
+            <ImageView
+                android:id="@+id/reply_bar_image"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:src="@drawable/thumb_15951118880user"
+                android:visibility="visible"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -98,7 +108,7 @@
                     android:gravity="left"
                     android:maxLines="1"
                     android:text="melika ahmadi"
-                    android:textColor="@color/gray"
+                    android:textColor="?colorPrimary"
                     android:textSize="15dp"
                     android:textStyle="bold" />
 
@@ -109,8 +119,8 @@
                     android:layout_gravity="left"
                     android:maxWidth="230dp"
                     android:maxLines="1"
-                    android:text="replied message is here"
-                    android:textColor="@color/black"
+                    android:text="Photo"
+                    android:textColor="?colorPrimary"
                     android:textSize="14dp"
                     android:textStyle="normal" />
             </LinearLayout>
@@ -172,11 +182,11 @@
 
         <ImageView
             android:id="@+id/Imageview"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="70dp"
+            android:layout_height="120dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="49dp"
-            android:adjustViewBounds="false"
+            android:layout_marginBottom="50dp"
+            android:adjustViewBounds="true"
             android:clickable="true"
             app:layout_collapseMode="parallax"
             app:layout_collapseParallaxMultiplier="0.7">
@@ -196,13 +206,13 @@
     </RelativeLayout>
 
 
-<!--        <View-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="40dp"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            android:background="?colorPrimaryVariant">-->
+    <!--        <View-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="40dp"-->
+    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--            app:layout_constraintStart_toStartOf="parent"-->
+    <!--            android:background="?colorPrimaryVariant">-->
 
-<!--        </View>-->
+    <!--        </View>-->
 
 </RelativeLayout>
