--- a/ChatHouse/app/src/main/res/layout/chat_image_right.xml
+++ b/ChatHouse/app/src/main/res/layout/chat_image_right.xml
@@ -35,6 +35,7 @@
 
 
                 <ImageView
+                    android:adjustViewBounds="true"
                     android:id="@+id/chat_messageImage_right_image"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -43,18 +44,6 @@
                     android:layout_marginVertical="4dp"
                     app:srcCompat="@drawable/thumb_15951118880user" />
 
-                <TextView
-                    android:id="@+id/chat_message_right_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:maxWidth="250dp"
-                    android:text="this image is geat!"
-                    android:textColor="@color/black"
-                    android:textSize="14dp"
-                    android:textStyle="normal">
-
-                </TextView>
 
                 <TextView
                     android:id="@+id/chat_time_right_image"
