--- a/ChatHouse/app/src/main/res/layout/chat_reply_image_left.xml
+++ b/ChatHouse/app/src/main/res/layout/chat_reply_image_left.xml
@@ -4,24 +4,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="5dp">
+    android:padding="3dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="right"
-        android:paddingVertical="4dp">
+        android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/chat_image_left_reply_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="0dp"
+            app:srcCompat="@mipmap/default_user_profile" />
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/chat_card_right_reply"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
-            android:backgroundTint="?colorPrimaryVariant"
+            android:layout_toEndOf="@+id/chat_image_left_reply_image"
+            android:backgroundTint="?colorOnPrimarySurface"
             android:minWidth="80dp"
-            android:minHeight="30dp"
-            android:maxWidth="35dp"
+            android:minHeight="60dp"
             app:cardCornerRadius="13dp"
             app:cardElevation="0dp">
 
@@ -29,66 +32,87 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:paddingTop="6dp"
-                android:paddingBottom="2dp"
-                android:paddingHorizontal="9dp">
+                android:paddingHorizontal="9dp"
+                android:paddingTop="4dp"
+                android:paddingBottom="2dp">
 
+                <TextView
+                    android:id="@+id/chat_name_left_reply_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:gravity="left"
+                    android:text="ali farahat"
+                    android:textColor="?colorPrimary"
+                    android:textSize="15dp"
+                    android:textStyle="bold">
+
+                </TextView>
 
                 <LinearLayout
-                    android:id="@+id/chat_replied_box_right_reply"
+                    android:id="@+id/chat_replied_box_left_reply_image"
                     android:layout_width="wrap_content"
                     android:layout_height="45dp"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="2dp">
+                    android:layout_marginTop="2dp"
+                    android:orientation="horizontal">
 
                     <View
                         android:layout_width="2dp"
                         android:layout_height="match_parent"
-                        android:background="?colorSecondary"
-                        android:layout_marginVertical="3dp"/>
+                        android:layout_marginVertical="3dp"
+                        android:background="?colorSecondary" />
+
+                    <ImageView
+                        android:id="@+id/chat_repliedImage_left_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="5dp"
+                        android:adjustViewBounds="true"
+                        app:srcCompat="@drawable/thumb_15951118880user" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:layout_marginLeft="10dp">
+                        android:layout_marginLeft="5dp"
+                        android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/chat_replied_name_right_reply"
+                            android:id="@+id/chat_replied_name_left_reply_image"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="left"
+                            android:layout_marginTop="2dp"
                             android:gravity="left"
+                            android:maxLines="1"
                             android:text="melika ahmadi"
                             android:textColor="?colorPrimary"
                             android:textSize="15dp"
-                            android:textStyle="bold"
-                            android:layout_marginTop="2dp"
-                            android:maxLines="1" />
+                            android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/chat_replied_message_right_reply"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="left"
-                            android:maxWidth="250dp"
+                            android:maxWidth="230dp"
                             android:maxLines="1"
-                            android:text="replied message is here"
-                            android:textColor="?colorOnSurface"
+                            android:text="Photo"
+                            android:textColor="?colorPrimary"
                             android:textSize="14dp"
-                            android:textStyle="normal"/>
+                            android:textStyle="normal" />
                     </LinearLayout>
 
 
                 </LinearLayout>
+
                 <TextView
-                    android:id="@+id/chat_message_right_reply"
+                    android:id="@+id/chat_message_left_reply_image"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
-                    android:maxWidth="250dp"
                     android:layout_marginTop="2dp"
-                    android:text="MessageMessageMessageMessageMessageMessageMessageMessage\nhello\nMessageMessageMessageMessage"
+                    android:maxWidth="250dp"
+                    android:text="a\"
                     android:textColor="?colorOnSurface"
                     android:textSize="14dp"
                     android:textStyle="normal">
@@ -96,7 +120,7 @@
                 </TextView>
 
                 <TextView
-                    android:id="@+id/chat_time_right_reply"
+                    android:id="@+id/chat_time_left_reply_image"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
